--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 	<head>
 		<title>Bacon PDX</title>
 		<meta charset="utf-8">
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:700,400' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
 		<link rel="stylesheet" href="baconstyle.css"/>
 		<script src="http://code.jquery.com/jquery-1.4.min.js" type="text/javascript"></script>
 		
 	</head>
-<body>
-		<div id="header">
-			<h1 id="main-head">Bacon PDX</h1>	
-				<ul id="nav">
-					<li><a href="index.html" id="home">Home</a></li>
-					<li><a href="#" id="menu">Menu</a></li>
-					<li><a href="#" id="gallery">Gallery</a></li>
+<body background="redtile.jpg">
+	<div id="wrapper" class="div">
+		<div id="header" class="div">
+			<!-- <img src="blogo.jpg" alt="Bacon PDX logo" style="max-width:100%;height:auto;"/> -->
+		
+			<div id="home-link" class="div">
+				<a href="index.html" id="home"><img src="baconpic.jpg" style="max-width:100%;height:auto;"></a>
+			</div>
+			<div id="nav" class="div">
+				<ul>
+					<li><a href="#" id="menu">MENU</a></li>
+					<li><a href="#" id="gallery">GALLERY</a></li>
 				</ul>
+			</div>
 		</div>
-		<div id="wrapper">
-			<div id="body">
+		<div id="body" class="main-content" class="div">
 			<p>We're located at Rose City Food Park,
 			5221 NE Sandy Blvd, in Portland OR.
 			Near NE Sandy Blvd & NE 52nd Ave.
@@ -94,36 +100,6 @@
 			</p>
 		</div>
 	</div>
-	</div>
 	<script src='script.js'></script>
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
